[package]
name = "pumpswap_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
sol-trade-sdk = "4.0.3"
solana-streamer-sdk = "0.5.0"
solana-sdk = "3.0.0"
solana-client = "3.1.12"
solana-account-decoder = "3.1.12"
solana-program = "3.0.0"
solana-keypair = "3.0.0"
solana-address = "2"
solana-commitment-config = { version = "3.1.1", features = ["serde"] }
solana-hash = "3.0.0"
spl-associated-token-account = "8"
spl-token = "7"

tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
url = "2.5"
chrono = "0.4"

redis = { version = "0.24", features = ["tokio-comp"] }
bs58 = "0.5"
openssl = { version = "0.10", features = ["vendored"] }
